# dupligator

./: Makefile  README.md  pyproject.toml
src/: dupligator
tests/: test_dupligator.py
